# ERA5Viewer

./: .cdsapirc  .gitignore  README.md  RESEARCH_CONTINUITY.md  analytics_utils.py  article_draft.md  article_proposals.md  correlation_analysis.py  era5_land.py  fetch_graphs.py  fix_log.py  lost_file.py  main.py  ml_pipeline.py  preprocess.py  pyproject.toml  restore_log.py  run.bat  search_kg.py  start.bat  test_units.py  validation.py
_skills/academic-research/: SKILL.md
_skills/advanced-thesis-writer/: SKILL.md
_skills/miri-reasoning/: SKILL.md
_skills/nautai-information-compilation/: SKILL.md
_skills/nautai-science-writing/: SKILL.md
_skills/nautai-step-consolidate/: SKILL.md
_skills/nautai-step-docx/: SKILL.md
articulo/: articulo_chsi.tex  referencias_chsi.bib
era5_land_tamaulipas/: download_log.json
plot_src/: plot_01_climatic_trends.py  plot_02_seasonal_correlation.py  plot_03_chsi_events.py  plot_04_ml_comparison.py  plot_05_feature_importances.py  plot_06_chsi_seasonal_slopes_comparison.py  plot_07_chsi_yearly_slopes_comparison.py  plot_08_chsi_normalized_components_comparison.py  plot_09_chsi_event_regime_sea_composite.py  plot_10_chsi_event_regime_chronological_overlay.py
reports/: chsi_tamesi_1998_2025.csv
skills/: 01-literature-harvesting.md  02-semantic-search.md  03-graph-mapping.md  04-tension-analysis.md  05-science-writing.md  README.md
static/: index.html
tools/: analyze_chsi_rolling_trends.py  analyze_event_regime_trends.py  generate_publication_plots.py  get_concepts_graph.py  get_contradictions.py  search_literature.py
(+8 files in other folders)
