[project]
name = "era5-viewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.8",
    "netcdf4>=1.7.4",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "seaborn>=0.13.2",
    "uvicorn>=0.44.0",
    "xarray>=2026.4.0",
    "cdsapi>=0.7.3",
    "dask>=2025.2.0",
    "zarr>=3.0.1",
    "scipy>=1.17.1",
    "fpdf2>=2.8.7",
    "scikit-learn>=1.6.0",
]
